# n2_1_puzzle

./: .pre-commit-config.yaml  LICENSE  README.md  main.py  n_puzzle_game.py  pyproject.toml
.github/workflows/: lint.yaml
n2_puzzle/: greedy.py  puzzle.py  search.py  solver.py  utils.py
