[tool.black]
line-length = 88
target-version = ['py38', 'py39']
include = '\.pyi?$'

[tool.poetry]
name = "n2-1-puzzle"
version = "0.1.0"
description = "A python implementation of n*2 puzzle and solvers"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
